more pest stuff

--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst.control_data.noptmax = 10\n",
+    "pst.control_data.noptmax = 4\n",
     "pst.pestpp_options[\"ies_num_reals\"] = 50\n",
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
     "\n",
@@ -166,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_timeseries(master_d, noptmax=viz_noptmax)"
+    "helpers.plot_ies_timeseries(master_d, noptmax=viz_noptmax, include_t=True)"
    ]
   },
   {
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_forecasts(master_d, noptmax=viz_noptmax)"
+    "helpers.plot_ies_forecasts(master_d, noptmax=viz_noptmax, include_t=True)"
    ]
   },
   {
