--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -79,8 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_prior_mc = True\n",
-    "num_workers = 10"
+    "run_prior_mc = False\n",
+    "num_workers = 15"
    ]
   },
   {
@@ -1022,11 +1022,53 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "66",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Now build the interface and the control file:"
+    "sfr_file = \"sv.sfr_packagedata.txt\"\n",
+    "if os.path.exists(os.path.join(pf.new_d, sfr_file)):\n",
+    "    pf.add_parameters(\n",
+    "        sfr_file,\n",
+    "        index_cols=[0, 1, 2],\n",
+    "        use_cols=[9],\n",
+    "        pargp=\"sfrhk\",\n",
+    "        par_name_base=\"sfrhk\",\n",
+    "        lower_bound=0.05,\n",
+    "        upper_bound=20,\n",
+    "        par_type=\"constant\",\n",
+    "        mfile_skip=0,\n",
+    "    )\n",
+    "else:\n",
+    "    riv_files = [f for f in os.listdir(pf.new_d) if \"riv_stress\" in f]\n",
+    "    print(riv_files)\n",
+    "    pf.add_parameters(\n",
+    "        riv_files,\n",
+    "        index_cols=[0, 1, 2],\n",
+    "        use_cols=[4],\n",
+    "        pargp=\"rivcond\",\n",
+    "        par_name_base=\"rivcond\",\n",
+    "        lower_bound=0.05,\n",
+    "        upper_bound=20,\n",
+    "        par_type=\"constant\",\n",
+    "        mfile_skip=0,\n",
+    "    )\n",
+    "    pf.add_parameters(\n",
+    "        riv_files,\n",
+    "        index_cols=[0, 1, 2],\n",
+    "        use_cols=[5],\n",
+    "        pargp=\"rivstage\",\n",
+    "        par_name_base=\"rivstage\",\n",
+    "        lower_bound=-1,\n",
+    "        upper_bound=1,\n",
+    "        par_type=\"constant\",\n",
+    "        mfile_skip=0,\n",
+    "        par_style=\"a\",\n",
+    "        transform=\"none\",\n",
+    "        initial_value=0.0,\n",
+    "    )"
    ]
   },
   {
@@ -1035,16 +1077,14 @@
    "id": "67",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pf.build_pst(filename=\"pest.pst\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "68",
    "metadata": {},
    "source": [
-    "Check the `obsval` quantities in the \"* observation data\" section - what are those numbers:"
+    "Now build the interface and the control file:"
    ]
   },
   {
@@ -1054,13 +1094,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pf.build_pst(filename=\"pest.pst\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70",
+   "metadata": {},
+   "source": [
+    "Check the `obsval` quantities in the \"* observation data\" section - what are those numbers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "obs = pf.pst.observation_data\n",
     "obs.obsval"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "70",
+   "id": "72",
    "metadata": {},
    "source": [
     "So if the `obsval` values are all the existing model output values, then if we run the model again just the same way, we should have a phi of zero - a great check!. Let's do that:"
@@ -1069,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,16 +1157,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "74",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "assert pst.phi < 1.e7"
+    "assert pf.pst.phi < 1.0e-5"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "75",
+   "id": "77",
    "metadata": {},
    "source": [
     "now we need to \"fix\" the pumping well pars - those are for later when we do optimization"
@@ -1117,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,28 +1190,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77",
-   "metadata": {},
-   "source": [
-    "Now generate a Prior parameter ensemble (which the parameter bound and geostat info we passed to `PstFrom` above)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pe = pf.draw(num_reals=1000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "79",
    "metadata": {},
    "source": [
-    "We need to enforce parameter bounds on those realizations, save it and add an arg to the control file to tell ies to use it:"
+    "Now generate a Prior parameter ensemble (which the parameter bound and geostat info we passed to `PstFrom` above)"
    ]
   },
   {
@@ -1161,13 +1203,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pe = pf.draw(num_reals=1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81",
+   "metadata": {},
+   "source": [
+    "We need to enforce parameter bounds on those realizations, save it and add an arg to the control file to tell ies to use it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pe.enforce()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82",
+   "id": "84",
    "metadata": {},
    "source": [
     "## Set observation values, weights and noise"
@@ -1186,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83",
+   "id": "85",
    "metadata": {},
    "source": [
     "Load the actual \"observation data\""
@@ -1195,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85",
+   "id": "87",
    "metadata": {},
    "source": [
     "Since we know the \"true\" values for our forecast, we will load them up and put the truth values in the control file to make plotting easier (and more interesting)"
@@ -1218,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87",
+   "id": "89",
    "metadata": {},
    "source": [
     "Models are always going to be low-pass filters compared to the complex natural systems that generated the observations.  So its usually a good idea to filter out high freq signal components.  Apply a rolling mean to each timeseries using the `window` parameter we defined earlier:"
@@ -1241,7 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,31 +1318,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "89",
-   "metadata": {},
-   "source": [
-    "Now load the control file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pst = pyemu.Pst(os.path.join(working_d, \"pest.pst\"))"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = pst.observation_data"
+    "smoothedlow = obsdf.rolling(window=window, center=True, min_periods=1).quantile(0.4)\n",
+    "for col in smoothedlow.columns:\n",
+    "    if \"riv-flow\" not in col:\n",
+    "        continue\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(6, 3))\n",
+    "    smoothedlow.loc[smoothedlow.index.year < 2015, col].plot(ax=ax, c=\"g\")\n",
+    "\n",
+    "    obsdf.loc[obsdf.index.year < 2015, col].plot(ax=ax, c=\"m\")\n",
+    "\n",
+    "    ax.set_title(col, loc=\"left\")\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -1292,12 +1345,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs.columns"
+    "smoothed[\"riv-flow\"] = smoothedlow[\"riv-flow\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "93",
+   "metadata": {},
+   "source": [
+    "Now load the control file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pst = pyemu.Pst(os.path.join(working_d, \"pest.pst\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs = pst.observation_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97",
    "metadata": {},
    "source": [
     "First set the truth values for the forecasts (just for plotting later)"
@@ -1306,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1319,7 +1410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95",
+   "id": "99",
    "metadata": {},
    "source": [
     "Now for the tricky part: we need to find each simulated output that we have an observed counterpart for.  In practice, this usually requires some bespoke code/hackery"
@@ -1328,7 +1419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,7 +1457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98",
+   "id": "102",
    "metadata": {},
    "source": [
     "now we need to set the weights and expected noise for each observation datum:"
@@ -1375,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1388,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1406,20 +1497,20 @@
     "    elif \"diff\" in prefix:\n",
     "        print(prefix)\n",
     "        obs.loc[hist_uobs.obsnme, \"weight\"] = [\n",
-    "            5.0 if oval > 0.1 else 1.0 for oval in hist_uobs.obsval\n",
+    "            3.0 if oval > 0.1 else 1.0 for oval in hist_uobs.obsval\n",
     "        ]\n",
     "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = [\n",
-    "            max(0.01, oval * 0.1) for oval in hist_uobs.obsval\n",
+    "            max(0.01, oval * 0.2) for oval in hist_uobs.obsval\n",
     "        ]\n",
     "        obs.loc[hist_uobs.obsnme, \"lower_bound\"] = 0.0\n",
     "    else:\n",
-    "        obs.loc[hist_uobs.obsnme, \"weight\"] = 2.0\n",
-    "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 0.5"
+    "        obs.loc[hist_uobs.obsnme, \"weight\"] = 1.0\n",
+    "        obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = 1.0"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "101",
+   "id": "105",
    "metadata": {},
    "source": [
     "if this is an advanced model, we can also use riv-flow information for history matching (one benefit of a more complex model) "
@@ -1428,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1528,7 @@
     "    uobs[\"datetime\"] = pd.to_datetime(uobs.datetime)\n",
     "    hist_uobs = uobs.loc[uobs.datetime.dt.year < 2015, :].copy()\n",
     "    hist_uobs[\"standard_deviation\"] = [\n",
-    "        max(0.2, oval * 0.1) for oval in np.abs(hist_uobs.obsval.values)\n",
+    "        max(0.2, oval * 0.2) for oval in np.abs(hist_uobs.obsval.values)\n",
     "    ]\n",
     "    hist_uobs.loc[hist_uobs.obsnme, \"weight\"] = 1 / hist_uobs.standard_deviation.values\n",
     "    obs.loc[hist_uobs.obsnme, \"standard_deviation\"] = (\n",
@@ -1452,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,7 +1552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "104",
+   "id": "108",
    "metadata": {},
    "source": [
     "Set noptmax to 0, save the control file and do a test run:"
@@ -1470,7 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,7 +1572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "106",
+   "id": "110",
    "metadata": {},
    "source": [
     "Now we are going to generate some autocorrelated timeseries noise to use in the history matching.  We are going to use a (very) long correlation lenght to express that we are more interested in low-frequency noise/error than high frequency"
@@ -1490,7 +1581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,7 +1604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "108",
+   "id": "112",
    "metadata": {},
    "source": [
     "Set a random seed to make sure we are getting the same draws:"
@@ -1522,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,7 +1634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "111",
+   "id": "115",
    "metadata": {},
    "source": [
     "Save the noise ensemble, tell ies about it, and an noptmax=-2 test run:"
@@ -1552,7 +1643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "113",
+   "id": "117",
    "metadata": {},
    "source": [
     "As you can see from the phi group summary, we need some rebalanced weights.  One way to do this is the the ies_phi_factor_file:"
@@ -1575,13 +1666,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
     "phi_factors = {\"lake\": 0.15, \"aq\": 0.3, \"wt\": 0.3, \"diff\": 0.25}\n",
     "if \"riv-flow\" in obs.usecol.unique():\n",
-    "    phi_factors = {\"lake\": 0.15, \"aq\": 0.25, \"wt\": 0.25, \"diff\": 0.15, \"riv-flow\": 0.2}\n",
+    "    phi_factors = {\"lake\": 0.15, \"aq\": 0.25, \"wt\": 0.25, \"diff\": 0.25, \"riv-flow\": 0.1}\n",
     "# phi_factors[\"diff\"] = 1e-20\n",
     "ser = pd.Series(phi_factors)\n",
     "ser.to_csv(os.path.join(working_d, \"phi_facs.csv\"), index=True, header=False)\n",
@@ -1593,7 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1627,7 +1718,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "120",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": []
