--- a/exercises/notebooks/SV_run_opt.ipynb
+++ b/exercises/notebooks/SV_run_opt.ipynb
@@ -21,7 +21,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pyemu\n",
-    "import flopy\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -284,69 +283,13 @@
    "id": "24",
    "metadata": {},
    "source": [
-    "Set constraints at each gw observation location so that during the future/optimization period, we arent dewatering the upper or lower aquifer"
+    "We also need to make sure that during each future stress period, we are meeting the long-term historic production rates"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gwobs = obs.loc[\n",
-    "    (obs.obsnme.str.contains(\"wt\")) | (obs.obsnme.str.contains(\"aq\")), :\n",
-    "].copy()\n",
-    "gwobs[\"i\"] = gwobs.usecol.apply(lambda x: int(x.split(\"-\")[1][1:]))\n",
-    "gwobs[\"j\"] = gwobs.usecol.apply(lambda x: int(x.split(\"-\")[2][1:]))\n",
-    "gwobs[\"k\"] = -999\n",
-    "gwobs.loc[gwobs.obsnme.str.contains(\"aq\"), \"k\"] = (\n",
-    "    1  # use the botm of the layer above to keep saturated conditions\n",
-    ")\n",
-    "gwobs.loc[gwobs.obsnme.str.contains(\"wt\"), \"k\"] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sim = flopy.mf6.MFSimulation.load(sim_ws=working_d, load_only=[\"dis\"])\n",
-    "gwf = sim.get_model()\n",
-    "botm = gwf.dis.botm.array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tol = 1.0\n",
-    "gwobs[\"datetime\"] = pd.to_datetime(gwobs.datetime)\n",
-    "gwobs = gwobs.loc[gwobs.datetime.dt.year > 2015, :].copy()\n",
-    "obs.loc[gwobs.obsnme, \"obsval\"] = gwobs.apply(\n",
-    "    lambda x: botm[x.k, x.i, x.j] + tol, axis=1\n",
-    ")\n",
-    "obs.loc[gwobs.obsnme, \"obgnme\"] = \"greater_than\"\n",
-    "obs.loc[gwobs.obsnme, \"weight\"] = 1.0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "28",
-   "metadata": {},
-   "source": [
-    "We also need to make sure that during each future stress period, we are producing the long-term historic avg production"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "29",
    "metadata": {},
    "source": [
     "Set `noptmax` to 1 and identify the objective function"
@@ -403,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -433,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "34",
    "metadata": {},
    "source": [
     "# post processing PESTPP-OPT"
@@ -460,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "35",
    "metadata": {},
    "source": [
     "check the final and initial objective function value:"
@@ -469,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "37",
    "metadata": {},
    "source": [
     "So we are able to extract more gw but also make river sw-gw exchange have zero change into the future - nice!"
@@ -489,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42",
+   "id": "38",
    "metadata": {},
    "source": [
     "Plot the optimal decision variable values:"
@@ -498,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44",
+   "id": "40",
    "metadata": {},
    "source": [
     "## investigating the response matrix"
@@ -520,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49",
+   "id": "45",
    "metadata": {},
    "source": [
     "# Reliability"
@@ -578,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50",
+   "id": "46",
    "metadata": {},
    "source": [
     "plot the histogram of the river swgw flux difference (the obs we used as a constraint)"
@@ -587,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52",
+   "id": "48",
    "metadata": {},
    "source": [
     "tell pestpp-opt how to use the uncertainty. We can also take advantage of the linear assumption and reuse the previous results so we dont need to any additional model runs (!)"
@@ -607,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54",
+   "id": "50",
    "metadata": {},
    "source": [
     "Rerun pestpp-opt :"
@@ -642,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56",
+   "id": "52",
    "metadata": {},
    "source": [
     "Visualize these results the same we did earlier:"
@@ -660,20 +603,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_phi_value = pd.read_csv(\n",
+    "reliable_phi_value = pd.read_csv(\n",
     "    os.path.join(working_d, \"pest.slp.iobj.csv\"), index_col=0\n",
     ").values[0][0]\n",
-    "hist_max, opt_phi_value"
+    "hist_max, opt_phi_value, reliable_phi_value"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": []
