--- a/exercises/notebooks/SV_run_opt.ipynb
+++ b/exercises/notebooks/SV_run_opt.ipynb
@@ -487,7 +487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 1, figsize=(10, 100))\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
     "vals = np.log10(np.abs(rm.loc[pst.nnz_obs_names[1:], :].values))\n",
     "cb = ax.imshow(vals)\n",
     "plt.colorbar(cb)\n",
@@ -566,7 +566,7 @@
     ")\n",
     "pst.pestpp_options[\"hotstart_resfile\"] = \"hotstart.rei\"\n",
     "pst.pestpp_options[\"opt_skip_final\"] = True\n",
-    "pst.pestpp_options[\"opt_risk\"] = 0.8\n",
+    "pst.pestpp_options[\"opt_risk\"] = 0.6\n",
     "\n",
     "\n",
     "par = pst.parameter_data\n",
@@ -631,6 +631,37 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs.loc[pred_wfobs.obsnme, \"obsval\"] = hist_max * 0.6\n",
+    "pst.pestpp_options[\"opt_risk\"] = 0.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pst.write(os.path.join(working_d, \"pest.pst\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyemu.os_utils.run(\"pestpp-opt pest.pst\", cwd=working_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": []
