--- a/exercises/notebooks/SV_run_dsi.ipynb
+++ b/exercises/notebooks/SV_run_dsi.ipynb
@@ -82,7 +82,7 @@
    "id": "8",
    "metadata": {},
    "source": [
-    "DSI works best when the histograms of the values of interest are (nearly) Guassian. So we can use a normal-score transform to help with this:"
+    "DSI works best when the histograms of the values of interest are (nearly) Guassian. Usually we can use a normal-score transform to help with this, but in this case, we dont need it..."
    ]
   },
   {
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transforms = [{\"type\": \"normal_score\"}]"
+    "transforms = []  # [{\"type\": \"normal_score\"}]"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "id": "17",
    "metadata": {},
    "source": [
-    "prepare the DSI input and outputs with a pest interface so that ies can use the dsi model"
+    "prepare the DSI input and outputs with a pest interface so that ies can use the dsi model with the `DSI.prepare_pestpp()` method (set `use_runstor` to True)"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "id": "20",
    "metadata": {},
    "source": [
-    "Define some options for ies to use with the dsi model"
+    "Define some options for ies to use with the dsi .  Use 300 realizations and 10 iterations"
    ]
   },
   {
@@ -212,7 +212,24 @@
     "dpst.pestpp_options[\"ies_num_reals\"] = 300\n",
     "dpst.pestpp_options[\"par_sigma_range\"] = 6\n",
     "dpst.control_data.noptmax = 10\n",
-    "dpst.pestpp_options.pop(\"parcov\", None)\n",
+    "dpst.pestpp_options.pop(\"parcov\", None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "Bring over some options used with the full-order-model ies run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# use the same obs+noise ensemble we used before\n",
     "dpst.pestpp_options[\"ies_obs_en\"] = pst.pestpp_options[\"ies_obs_en\"]\n",
     "shutil.copy2(\n",
@@ -232,28 +249,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
-   "metadata": {},
-   "source": [
-    "Save the control file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dpst.write(os.path.join(dsi_d, \"dsi.pst\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "24",
    "metadata": {},
    "source": [
-    "DSI is fast, so fast, we dont need tcp/ip run mgmt, we can just use a simple external run mgr.  Start pestpp-ies in the dsi directory with the \"/e\" flag:"
+    "Save the control file"
    ]
   },
   {
@@ -263,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyemu.os_utils.run(\"pestpp-ies dsi.pst /e\", cwd=dsi_d)"
+    "dpst.write(os.path.join(dsi_d, \"dsi.pst\"))"
    ]
   },
   {
@@ -271,7 +270,7 @@
    "id": "26",
    "metadata": {},
    "source": [
-    "All this is the same as in the ies notebook:"
+    "DSI is fast, so fast, we dont need tcp/ip run mgmt, we can just use a simple external run mgr.  Start pestpp-ies in the dsi directory with the \"/e\" flag:"
    ]
   },
   {
@@ -281,17 +280,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noptmax = None"
+    "pyemu.os_utils.run(\"pestpp-ies dsi.pst /e\", cwd=dsi_d)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "28",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "helpers.plot_ies_timeseries(dsi_d, pst_name=\"dsi.pst\", noptmax=noptmax)"
+    "All this is the same as in the ies notebook:"
    ]
   },
   {
@@ -301,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_forecasts(dsi_d, pst_name=\"dsi.pst\", include_t=True, noptmax=noptmax)"
+    "viz_noptmax = 3"
    ]
   },
   {
@@ -311,13 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tags = [\n",
-    "    \"npf-k-layer1\",\n",
-    "    \"npf-k-layer5\",\n",
-    "    \"npf-k33-layer3\",\n",
-    "    \"sto-ss-layer1\",\n",
-    "    \"sto-sy-layer1\",\n",
-    "]"
+    "helpers.plot_ies_timeseries(dsi_d, pst_name=\"dsi.pst\", noptmax=viz_noptmax)"
    ]
   },
   {
@@ -327,14 +318,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for tag in tags:\n",
-    "    helpers.plot_ies_properties(dsi_d, tag, pst_name=\"dsi.pst\", noptmax=noptmax)"
+    "helpers.plot_ies_forecasts(dsi_d, pst_name=\"dsi.pst\", noptmax=viz_noptmax)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": []
