--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -36,9 +36,9 @@
     "# the new dataset for this experiment\n",
     "working_d = \"model_and_pest_file_exp1\"\n",
     "# the master ies dir that will be created\n",
-    "master_d = \"master_ies\"\n",
+    "master_d = \"master_ies_base_phifac\"\n",
     "# number of parallel workers\n",
-    "num_workers = 15\n",
+    "num_workers = 10\n",
     "# iteration number to visualize: if `None`, the final iteration is used\n",
     "viz_noptmax = None"
    ]
@@ -81,7 +81,7 @@
    "id": "6",
    "metadata": {},
    "source": [
-    "Modify any ies settings"
+    "Modify any ies settings.  Lets use 4 iterations, 50 realizations, and a bad-phi-sigma of 1.75"
    ]
   },
   {
@@ -92,10 +92,10 @@
    "outputs": [],
    "source": [
     "pst.control_data.noptmax = 4\n",
-    "pst.pestpp_options[\"ies_num_reals\"] = 150\n",
+    "pst.pestpp_options[\"ies_num_reals\"] = 50\n",
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
     "\n",
-    "\n",
+    "# pst.pestpp_options.pop(\"ies_phi_factor_file\",None)\n",
     "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
     "# pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
     "# pst.pestpp_options[\"ies_multimodal_alpha\"] = 0.99\n",
@@ -106,9 +106,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "Save the control file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "run PESTPP-IES"
@@ -126,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
     "Process and plot the results.  "
@@ -153,34 +161,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
-    "This creates a multi-page pdf in the master dir"
+    "Call `helpers.plot_ies_timeseries()`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_timeseries(master_d, noptmax=viz_noptmax, include_t=True)"
+    "helpers.plot_ies_timeseries(master_d, noptmax=viz_noptmax)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
-    "Plot some property realizations"
+    "Plot some property realizations using `helpers.plot_ies_properties()` by looping over each of these property tags:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,16 +214,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
-    "Plot the prior and posterior forecast histograms:"
+    "Plot the prior and posterior forecast histograms (the money plots!)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "Explore other ies results via the `Pst.ies` handler:"
@@ -233,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "source": [
     "Plot the `actual` and `meas`ured phi sequence across iterations"
@@ -251,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "source": [
     "Visualize the parameter change summary across iterations"
@@ -285,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,14 +316,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "27",
    "metadata": {},
    "outputs": [],
@@ -325,6 +325,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": []
