add working intro notemook

--- a/exercises/synthetic-valley/unstructured/synthetic_valley_example.ipynb
+++ b/exercises/synthetic-valley/unstructured/synthetic_valley_example.ipynb
@@ -1208,8 +1208,9 @@
     ")\n",
     "\n",
     "# add concentration and iflowface to lake data as aux\n",
+    "lake_conc0 = 0.0\n",
     "lake_iflowface = -1.0\n",
-    "lakpak_data = [(0, lake_ic, lakpak_dict[0], 1.0, lake_iflowface)]"
+    "lakpak_data = [(0, lake_ic, lakpak_dict[0], lake_conc0, lake_iflowface)]"
    ]
   },
   {
@@ -1231,7 +1232,10 @@
     "    row = temporal_df.iloc[n]\n",
     "    rain = float(row[rain_tag]) * in2ft * ft2m\n",
     "    pet = float(row[pet_tag]) * in2ft * ft2m\n",
-    "    lake_spd[n] = [(0, \"rainfall\", rain), (0, \"evaporation\", pet)]"
+    "    spd = [(0, \"rainfall\", rain), (0, \"evaporation\", pet)]\n",
+    "    if n == 1:\n",
+    "        spd += [(0, \"AUXILIARY\", \"CONCENTRATION\", 1.0)]\n",
+    "    lake_spd[n] = spd"
    ]
   },
   {
