check in ebefore making instructor notebooks

--- a/exercises/notebooks/SV_run_opt.ipynb
+++ b/exercises/notebooks/SV_run_opt.ipynb
@@ -23,12 +23,23 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pyemu\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import helpers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = helpers.get_domain_map()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "source": [
     "Set some important vars for this notebook"
@@ -37,17 +48,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_workers = 15\n",
+    "num_workers = 10\n",
     "master_d = \"master_opt\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "source": [
     "The existing master ies directory - needed so we can get the calibrated par values"
@@ -56,17 +67,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ies_d = \"master_ies_base_phifac\"\n",
+    "ies_d = \"master_ies\"\n",
     "assert os.path.exists(ies_d)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "Define the working directory where the opt-modified control file will be "
@@ -75,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -100,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "First we need to modify the parameter data section to identify which parameters will be adjusted during optimization - we call these decision variables:"
@@ -120,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "Get the posterior parameter ensemble and look for the \"base\" realization"
@@ -138,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "source": [
     "### Setting up the decision variables\n",
@@ -182,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "source": [
     "cast the `kper` to an \"int\", then make sure we are only adjusting wel pars that correspond to the future period"
@@ -200,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "source": [
     "Markk these well parameters as \"none\" transformed and modify their derivative calculation quantities to make sure we are using large enough perturbation increments"
@@ -223,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "source": [
     "Now modify the observation data section: set all obs to zero weight, then find constraints and set them accordingly"
@@ -252,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "source": [
     "find any observation name that have \"forecast\", \"diff\" and \"riv-swgw\" in the name.  There should be exactly 1 of these"
@@ -271,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "source": [
     "What is the value for this quantity in the calibrated model?"
@@ -296,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "source": [
     "Set the observation to have a weight of 1.0, set the `obgnme` to \"greater_than\" and the `obsval` to 0.0.  This tells pestpp-opt that we want the future long-term average swgw exchange to be at least the same amount as the historic equivalent."
@@ -314,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "source": [
     "Find the sum of future gw pumping observation - this will be our objective function that we want to maximize.  The observation should have \"forecast\",\"pred\" and \"wel\" in the name.  There should be only one observation.  Assign this observation to a variable called `obj_name`"
@@ -334,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "33",
    "metadata": {},
    "source": [
     "We also need to make sure that during each future stress period, we are meeting the long-term historic production rates.  \n",
@@ -363,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34",
+   "id": "35",
    "metadata": {},
    "source": [
     "Now cast the `datetime` column using `pd.to_datetime()`"
@@ -384,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "37",
    "metadata": {},
    "source": [
     "Now split these well-flux obs into historic and predictive/future by the year 2015"
@@ -402,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38",
+   "id": "39",
    "metadata": {},
    "source": [
     "What was the historic maximum gw production rate (using the posterior ensemble base realization)?"
@@ -421,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "42",
    "metadata": {},
    "source": [
     "for the future/predictive well flux observations, set the `weight` to 1.0, the obsval to 90% of the historic max (assuming some future water conservation) and the `obgnme` to \"greater_than\""
@@ -450,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43",
+   "id": "44",
    "metadata": {},
    "source": [
     "Set `noptmax` to 1 and identify the objective function via the \"opt_objective_function\" argument.  Set the \"opt_direction\" to \"max\", telling pestpp-opt to maximize the future groundwater production"
@@ -470,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45",
+   "id": "46",
    "metadata": {},
    "source": [
     "Save the control file"
@@ -490,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47",
+   "id": "48",
    "metadata": {},
    "source": [
     "Run pestpp-opt using the `pyemu.os_utils.start_workers()` function:"
@@ -508,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49",
+   "id": "50",
    "metadata": {},
    "source": [
     "# post processing PESTPP-OPT"
@@ -535,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50",
+   "id": "51",
    "metadata": {},
    "source": [
     "check the final and initial objective function value:"
@@ -544,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52",
+   "id": "53",
    "metadata": {},
    "source": [
     "So we are able to extract more gw but also make river sw-gw exchange have zero change into the future - nice!"
@@ -564,20 +575,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53",
+   "id": "54",
    "metadata": {},
    "source": [
     "Plot the optimal decision variable values.  First read the optimal decision variables stored in the \"pest.1.par\" parameter value file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "opt_par_vals = pyemu.pst_utils.read_parfile(os.path.join(master_d, \"pest.1.par\"))"
    ]
   },
   {
@@ -587,13 +588,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "opt_par_vals = pyemu.pst_utils.read_parfile(os.path.join(master_d, \"pest.1.par\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ax = opt_par_vals.loc[wpar.parnme, \"parval1\"].plot(kind=\"bar\", figsize=(10, 10))\n",
     "ax.grid()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "56",
+   "id": "57",
    "metadata": {},
    "source": [
     "## investigating the response matrix\n",
@@ -604,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59",
+   "id": "60",
    "metadata": {},
    "source": [
     "# Reliability"
@@ -636,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60",
+   "id": "61",
    "metadata": {},
    "source": [
     "plot the posterior histogram of the river swgw flux difference (the obs we used as a constraint)"
@@ -645,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62",
+   "id": "63",
    "metadata": {},
    "source": [
     "tell pestpp-opt how to use the uncertainty. We can also take advantage of the linear assumption and reuse the previous results so we dont need to any additional model runs (!)"
@@ -665,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64",
+   "id": "65",
    "metadata": {},
    "source": [
     "Rerun pestpp-opt :"
@@ -709,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66",
+   "id": "67",
    "metadata": {},
    "source": [
     "Visualize these results the same we did earlier:"
@@ -727,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,20 +751,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
     "opt_par_vals = pyemu.pst_utils.read_parfile(os.path.join(working_d, \"pest.1.par\")).loc[\n",
     "    wpar.parnme\n",
     "]\n",
-    "ax = opt_par_vals[\"parval1\"].plot(kind=\"bar\")\n",
+    "ax = opt_par_vals[\"parval1\"].plot(kind=\"bar\", figsize=(10, 10))\n",
     "ax.grid()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "69",
+   "id": "70",
    "metadata": {},
    "source": [
     "Have a play at optimizing the optimization hyper parameters:"
@@ -762,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -803,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": []
