--- a/exercises/notebooks/SV_run_dsi.ipynb
+++ b/exercises/notebooks/SV_run_dsi.ipynb
@@ -23,8 +23,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = helpers.get_domain_map()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3",
    "metadata": {},
    "source": [
     "Define the existing ies master dir"
@@ -33,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "source": [
     "Load the control file from ies"
@@ -52,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "Get the prior observation (simulated results) ensemble - this will have outputs from the past and the future"
@@ -70,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,25 +89,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
-    "DSI works best when the histograms of the values of interest are (nearly) Guassian. Usually we can use a normal-score transform to help with this, but in this case, we dont need it..."
+    "DSI works best when the histograms of the values of interest are (nearly) Guassian. Usually we can use a normal-score transform to help with this"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "transforms = []  # [{\"type\": \"normal_score\"}]"
+    "transforms = [{\"type\": \"normal_score\"}]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "Define the DSI instance"
@@ -106,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "Now we need to \"fit\" our statistical model, which for this form of DSI is pretty trivial"
@@ -130,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,20 +149,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
     "Define the directory that will hold the dsi files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dsi_d = \"master_dsi\""
    ]
   },
   {
@@ -162,26 +162,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dsi_d = \"master_dsi\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if os.path.exists(dsi_d):\n",
     "    shutil.rmtree(dsi_d)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "prepare the DSI input and outputs with a pest interface so that ies can use the dsi model with the `DSI.prepare_pestpp()` method (set `use_runstor` to True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dpst = dsi.prepare_pestpp(t_d=dsi_d, use_runstor=True)"
    ]
   },
   {
@@ -191,15 +191,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dpst"
+    "dpst = dsi.prepare_pestpp(t_d=dsi_d, use_runstor=True)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "20",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Define some options for ies to use with the dsi .  Use 300 realizations and 10 iterations"
+    "dpst"
    ]
   },
   {
@@ -209,9 +211,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dpst.pestpp_options[\"ies_num_reals\"] = 300\n",
-    "dpst.pestpp_options[\"par_sigma_range\"] = 6\n",
-    "dpst.control_data.noptmax = 10\n",
     "dpst.pestpp_options.pop(\"parcov\", None)"
    ]
   },
@@ -220,13 +219,33 @@
    "id": "22",
    "metadata": {},
    "source": [
-    "Bring over some options used with the full-order-model ies run:"
+    "Define some options for ies to use with the dsi .  Use 300 realizations and 10 iterations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dpst.pestpp_options[\"ies_num_reals\"] = 300\n",
+    "dpst.pestpp_options[\"par_sigma_range\"] = 6\n",
+    "dpst.control_data.noptmax = 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24",
+   "metadata": {},
+   "source": [
+    "Bring over some options used with the full-order-model ies run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,28 +268,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
-   "metadata": {},
-   "source": [
-    "Save the control file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dpst.write(os.path.join(dsi_d, \"dsi.pst\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "26",
    "metadata": {},
    "source": [
-    "DSI is fast, so fast, we dont need tcp/ip run mgmt, we can just use a simple external run mgr.  Start pestpp-ies in the dsi directory with the \"/e\" flag:"
+    "Save the control file"
    ]
   },
   {
@@ -280,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyemu.os_utils.run(\"pestpp-ies dsi.pst /e\", cwd=dsi_d)"
+    "dpst.write(os.path.join(dsi_d, \"dsi.pst\"))"
    ]
   },
   {
@@ -288,7 +289,7 @@
    "id": "28",
    "metadata": {},
    "source": [
-    "All this is the same as in the ies notebook:"
+    "DSI is fast, so fast, we dont need tcp/ip run mgmt, we can just use a simple external run mgr.  Start pestpp-ies in the dsi directory with the \"/e\" flag:"
    ]
   },
   {
@@ -298,17 +299,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "viz_noptmax = 3"
+    "pyemu.os_utils.run(\"pestpp-ies dsi.pst /e\", cwd=dsi_d)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "30",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "helpers.plot_ies_timeseries(dsi_d, pst_name=\"dsi.pst\", noptmax=viz_noptmax)"
+    "All this is the same as in the ies notebook:"
    ]
   },
   {
@@ -318,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_forecasts(dsi_d, pst_name=\"dsi.pst\", noptmax=viz_noptmax)"
+    "viz_noptmax = 3"
    ]
   },
   {
@@ -327,12 +326,32 @@
    "id": "32",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "helpers.plot_ies_timeseries(dsi_d, pst_name=\"dsi.pst\", noptmax=viz_noptmax)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "helpers.plot_ies_forecasts(dsi_d, pst_name=\"dsi.pst\", noptmax=viz_noptmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": []
