--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -31,12 +31,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "_ = helpers.get_domain_map()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# the existing dataset\n",
     "org_working_d = \"model_and_pest_files\"\n",
     "# the new dataset for this experiment\n",
     "working_d = \"model_and_pest_file_exp1\"\n",
     "# the master ies dir that will be created\n",
-    "master_d = \"master_ies_base_phifac\"\n",
+    "master_d = \"master_ies\"\n",
     "# number of parallel workers\n",
     "num_workers = 10\n",
     "# iteration number to visualize: if `None`, the final iteration is used\n",
@@ -46,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "source": [
     "load the control file and check that it has had weights set"
@@ -67,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "Modify any ies settings.  Lets use 4 iterations, 50 realizations, and a bad-phi-sigma of 1.75"
@@ -87,14 +97,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
     "pst.control_data.noptmax = 4\n",
-    "pst.pestpp_options[\"ies_num_reals\"] = 50\n",
+    "pst.pestpp_options[\"ies_num_reals\"] = 100\n",
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
-    "\n",
+    "pst.pestpp_options[\"panther_agent_freeze_on_fail\"] = True\n",
     "# pst.pestpp_options.pop(\"ies_phi_factor_file\",None)\n",
     "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
     "# pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
@@ -107,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "Save the control file"
@@ -116,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "run PESTPP-IES"
@@ -134,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "Process and plot the results.  "
@@ -161,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "Call `helpers.plot_ies_timeseries()`"
@@ -170,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "source": [
     "Plot some property realizations using `helpers.plot_ies_properties()` by looping over each of these property tags:\n"
@@ -188,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "source": [
     "Plot the prior and posterior forecast histograms (the money plots!)"
@@ -223,16 +233,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_forecasts(master_d, noptmax=viz_noptmax, include_t=True)"
+    "helpers.plot_ies_forecasts(master_d, noptmax=viz_noptmax)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "source": [
     "Explore other ies results via the `Pst.ies` handler:"
@@ -241,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "source": [
     "Plot the `actual` and `meas`ured phi sequence across iterations"
@@ -259,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "source": [
     "Visualize the parameter change summary across iterations"
@@ -293,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,14 +326,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "28",
    "metadata": {},
    "outputs": [],
@@ -333,6 +335,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": []
